/*
 * SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package service

import (
	"context"
	"testing"

	"github.com/google/uuid"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	inventorymanager "github.com/nvidia/bare-metal-manager-rest/rla/internal/inventory/manager"
	"github.com/nvidia/bare-metal-manager-rest/rla/pkg/inventoryobjects/component"
	"github.com/nvidia/bare-metal-manager-rest/rla/pkg/inventoryobjects/rack"
	inventorystore "github.com/nvidia/bare-metal-manager-rest/rla/internal/inventory/store"
	"github.com/nvidia/bare-metal-manager-rest/rla/pkg/common/deviceinfo"
	"github.com/nvidia/bare-metal-manager-rest/rla/pkg/common/devicetypes"
	pb "github.com/nvidia/bare-metal-manager-rest/rla/pkg/proto/v1"
)

// --- Minimal mock for inventorymanager.Manager ---

type mockManager struct {
	inventorymanager.Manager // embed to satisfy the interface; unimplemented methods will panic

	components map[uuid.UUID]*component.Component
	racks      map[uuid.UUID]*rack.Rack
	drifts     []inventorystore.ComponentDrift
}

func newMockManager() *mockManager {
	return &mockManager{
		components: make(map[uuid.UUID]*component.Component),
		racks:      make(map[uuid.UUID]*rack.Rack),
	}
}

func (m *mockManager) GetDriftsByComponentIDs(_ context.Context, componentIDs []uuid.UUID) ([]inventorystore.ComponentDrift, error) {
	idSet := make(map[uuid.UUID]bool, len(componentIDs))
	for _, id := range componentIDs {
		idSet[id] = true
	}
	var result []inventorystore.ComponentDrift
	for _, d := range m.drifts {
		if d.ComponentID != nil && idSet[*d.ComponentID] {
			result = append(result, d)
		}
	}
	return result, nil
}

func (m *mockManager) GetAllDrifts(_ context.Context) ([]inventorystore.ComponentDrift, error) {
	return m.drifts, nil
}

func (m *mockManager) GetRackByID(_ context.Context, id uuid.UUID, _ bool) (*rack.Rack, error) {
	if r, ok := m.racks[id]; ok {
		return r, nil
	}
	return nil, assert.AnError
}

func (m *mockManager) GetComponentByID(_ context.Context, id uuid.UUID) (*component.Component, error) {
	if c, ok := m.components[id]; ok {
		return c, nil
	}
	return nil, assert.AnError
}

func (m *mockManager) AddComponent(_ context.Context, comp *component.Component) (uuid.UUID, error) {
	m.components[comp.Info.ID] = comp
	return comp.Info.ID, nil
}

func (m *mockManager) PatchComponent(_ context.Context, comp *component.Component) error {
	m.components[comp.Info.ID] = comp
	return nil
}

func (m *mockManager) DeleteComponent(_ context.Context, id uuid.UUID) error {
	delete(m.components, id)
	return nil
}

// --- Tests ---

func TestAddComponent_Success(t *testing.T) {
	mgr := newMockManager()
	rackID := uuid.New()
	mgr.racks[rackID] = &rack.Rack{Info: deviceinfo.DeviceInfo{ID: rackID, Name: "test-rack"}}

	server := &RLAServerImpl{inventoryManager: mgr}

	req := &pb.AddComponentRequest{
		Component: &pb.Component{
			Type: pb.ComponentType_COMPONENT_TYPE_COMPUTE,
			Info: &pb.DeviceInfo{
				Id:           &pb.UUID{Id: uuid.New().String()},
				Name:         "node-01",
				Manufacturer: "NVIDIA",
				SerialNumber: "SN123",
			},
			FirmwareVersion: "1.0.0",
			Position: &pb.RackPosition{
				SlotId:  1,
				TrayIdx: 0,
				HostId:  1,
			},
			RackId: &pb.UUID{Id: rackID.String()},
		},
	}

	resp, err := server.AddComponent(context.Background(), req)
	require.NoError(t, err)
	require.NotNil(t, resp)
	require.NotNil(t, resp.Component)
	assert.Equal(t, "node-01", resp.Component.Info.Name)
	assert.Equal(t, pb.ComponentType_COMPONENT_TYPE_COMPUTE, resp.Component.Type)
	assert.Equal(t, "1.0.0", resp.Component.FirmwareVersion)
	assert.Equal(t, int32(1), resp.Component.Position.SlotId)
}

func TestAddComponent_MissingRackID(t *testing.T) {
	mgr := newMockManager()
	server := &RLAServerImpl{inventoryManager: mgr}

	req := &pb.AddComponentRequest{
		Component: &pb.Component{
			Type: pb.ComponentType_COMPONENT_TYPE_COMPUTE,
			Info: &pb.DeviceInfo{Name: "node-01", Manufacturer: "NVIDIA", SerialNumber: "SN123"},
			// rack_id not set
		},
	}

	_, err := server.AddComponent(context.Background(), req)
	require.Error(t, err)
	assert.Contains(t, err.Error(), "rack_id is required")
}

func TestAddComponent_MissingComponent(t *testing.T) {
	mgr := newMockManager()
	server := &RLAServerImpl{inventoryManager: mgr}

	req := &pb.AddComponentRequest{
		// component not set
	}

	_, err := server.AddComponent(context.Background(), req)
	require.Error(t, err)
	assert.Contains(t, err.Error(), "component is required")
}

func TestAddComponent_RackNotFound(t *testing.T) {
	mgr := newMockManager()
	server := &RLAServerImpl{inventoryManager: mgr}

	req := &pb.AddComponentRequest{
		Component: &pb.Component{
			Type:   pb.ComponentType_COMPONENT_TYPE_COMPUTE,
			Info:   &pb.DeviceInfo{Name: "node-01", Manufacturer: "NVIDIA", SerialNumber: "SN123"},
			RackId: &pb.UUID{Id: uuid.New().String()}, // non-existent rack
		},
	}

	_, err := server.AddComponent(context.Background(), req)
	require.Error(t, err)
	assert.Contains(t, err.Error(), "rack not found")
}

func TestDeleteComponent_Success(t *testing.T) {
	mgr := newMockManager()
	compID := uuid.New()
	mgr.components[compID] = &component.Component{
		Type: devicetypes.ComponentTypeCompute,
		Info: deviceinfo.DeviceInfo{ID: compID, Name: "node-01"},
	}

	server := &RLAServerImpl{inventoryManager: mgr}

	resp, err := server.DeleteComponent(context.Background(), &pb.DeleteComponentRequest{
		Id: &pb.UUID{Id: compID.String()},
	})
	require.NoError(t, err)
	require.NotNil(t, resp)

	// Verify the component is removed from the mock
	_, exists := mgr.components[compID]
	assert.False(t, exists)
}

func TestDeleteComponent_MissingID(t *testing.T) {
	mgr := newMockManager()
	server := &RLAServerImpl{inventoryManager: mgr}

	_, err := server.DeleteComponent(context.Background(), &pb.DeleteComponentRequest{})
	require.Error(t, err)
	assert.Contains(t, err.Error(), "component id is required")
}

func TestDeleteComponent_NotFound(t *testing.T) {
	mgr := newMockManager()
	server := &RLAServerImpl{inventoryManager: mgr}

	_, err := server.DeleteComponent(context.Background(), &pb.DeleteComponentRequest{
		Id: &pb.UUID{Id: uuid.New().String()},
	})
	require.Error(t, err)
	assert.Contains(t, err.Error(), "component not found")
}

func TestPatchComponent_Success(t *testing.T) {
	mgr := newMockManager()
	compID := uuid.New()
	rackID := uuid.New()
	mgr.components[compID] = &component.Component{
		Type: devicetypes.ComponentTypeCompute,
		Info: deviceinfo.DeviceInfo{ID: compID, Name: "node-01", Manufacturer: "NVIDIA", SerialNumber: "SN123"},
		Position: component.InRackPosition{
			SlotID:    1,
			TrayIndex: 0,
			HostID:    1,
		},
		FirmwareVersion: "1.0.0",
		RackID:          rackID,
	}

	server := &RLAServerImpl{inventoryManager: mgr}

	newFW := "2.0.0"
	req := &pb.PatchComponentRequest{
		Id:              &pb.UUID{Id: compID.String()},
		FirmwareVersion: &newFW,
		Position: &pb.RackPosition{
			SlotId:  3,
			TrayIdx: 2,
			HostId:  5,
		},
	}

	resp, err := server.PatchComponent(context.Background(), req)
	require.NoError(t, err)
	require.NotNil(t, resp)
	require.NotNil(t, resp.Component)

	// Verify the update was persisted to mock
	updated := mgr.components[compID]
	assert.Equal(t, "2.0.0", updated.FirmwareVersion)
	assert.Equal(t, 3, updated.Position.SlotID)
	assert.Equal(t, 2, updated.Position.TrayIndex)
	assert.Equal(t, 5, updated.Position.HostID)
}

func TestPatchComponent_MissingID(t *testing.T) {
	mgr := newMockManager()
	server := &RLAServerImpl{inventoryManager: mgr}

	newFW := "2.0.0"
	_, err := server.PatchComponent(context.Background(), &pb.PatchComponentRequest{
		FirmwareVersion: &newFW,
	})
	require.Error(t, err)
	assert.Contains(t, err.Error(), "component id is required")
}

func TestPatchComponent_ComponentNotFound(t *testing.T) {
	mgr := newMockManager()
	server := &RLAServerImpl{inventoryManager: mgr}

	newFW := "2.0.0"
	_, err := server.PatchComponent(context.Background(), &pb.PatchComponentRequest{
		Id:              &pb.UUID{Id: uuid.New().String()},
		FirmwareVersion: &newFW,
	})
	require.Error(t, err)
	assert.Contains(t, err.Error(), "failed to get component")
}

func TestPatchComponent_RackReassign(t *testing.T) {
	mgr := newMockManager()
	compID := uuid.New()
	oldRackID := uuid.New()
	newRackID := uuid.New()
	mgr.components[compID] = &component.Component{
		Type:   devicetypes.ComponentTypeCompute,
		Info:   deviceinfo.DeviceInfo{ID: compID, Name: "node-01"},
		RackID: oldRackID,
	}

	server := &RLAServerImpl{inventoryManager: mgr}

	req := &pb.PatchComponentRequest{
		Id:     &pb.UUID{Id: compID.String()},
		RackId: &pb.UUID{Id: newRackID.String()},
	}

	resp, err := server.PatchComponent(context.Background(), req)
	require.NoError(t, err)
	require.NotNil(t, resp)

	updated := mgr.components[compID]
	assert.Equal(t, newRackID, updated.RackID)
}

// --- ValidateComponents Tests ---

// helper to build a rack with components for validate tests
func setupValidateTestData(mgr *mockManager) (uuid.UUID, []uuid.UUID) {
	rackID := uuid.New()

	comp1ID := uuid.New()
	comp2ID := uuid.New()
	comp3ID := uuid.New()

	mgr.racks[rackID] = &rack.Rack{
		Info: deviceinfo.DeviceInfo{ID: rackID, Name: "test-rack"},
		Components: []component.Component{
			{
				Type:            devicetypes.ComponentTypeCompute,
				Info:            deviceinfo.DeviceInfo{ID: comp1ID, Name: "compute-01", Manufacturer: "NVIDIA"},
				FirmwareVersion: "1.0.0",
				RackID:          rackID,
			},
			{
				Type:            devicetypes.ComponentTypeCompute,
				Info:            deviceinfo.DeviceInfo{ID: comp2ID, Name: "compute-02", Manufacturer: "NVIDIA"},
				FirmwareVersion: "1.0.0",
				RackID:          rackID,
			},
			{
				Type:            devicetypes.ComponentTypeNVLSwitch,
				Info:            deviceinfo.DeviceInfo{ID: comp3ID, Name: "nvlswitch-01", Manufacturer: "Mellanox"},
				FirmwareVersion: "2.0.0",
				RackID:          rackID,
			},
		},
	}

	// Set up drifts for comp1 (mismatch) and comp2 (missing_in_actual)
	mgr.drifts = []inventorystore.ComponentDrift{
		{
			ID:          uuid.New(),
			ComponentID: &comp1ID,
			DriftType:   "mismatch",
			Diffs: []inventorystore.FieldDiff{
				{FieldName: "firmware_version", ExpectedValue: "1.0.0", ActualValue: "1.1.0"},
			},
		},
		{
			ID:          uuid.New(),
			ComponentID: &comp2ID,
			DriftType:   "missing_in_actual",
		},
		{
			ID:          uuid.New(),
			ComponentID: &comp3ID,
			DriftType:   "mismatch",
			Diffs: []inventorystore.FieldDiff{
				{FieldName: "firmware_version", ExpectedValue: "2.0.0", ActualValue: "2.1.0"},
			},
		},
	}

	return rackID, []uuid.UUID{comp1ID, comp2ID, comp3ID}
}

func TestValidateComponents_NoFilters(t *testing.T) {
	mgr := newMockManager()
	rackID, _ := setupValidateTestData(mgr)
	server := &RLAServerImpl{inventoryManager: mgr}

	resp, err := server.ValidateComponents(context.Background(), &pb.ValidateComponentsRequest{
		TargetSpec: &pb.OperationTargetSpec{
			Targets: &pb.OperationTargetSpec_Racks{
				Racks: &pb.RackTargets{
					Targets: []*pb.RackTarget{
						{Identifier: &pb.RackTarget_Id{Id: &pb.UUID{Id: rackID.String()}}},
					},
				},
			},
		},
	})

	require.NoError(t, err)
	require.NotNil(t, resp)
	// 3 drifts: comp1 mismatch, comp2 missing_in_actual, comp3 mismatch
	assert.Equal(t, int32(3), resp.TotalDiffs)
	assert.Equal(t, 3, len(resp.Diffs))
	assert.Equal(t, int32(2), resp.DriftCount)
	assert.Equal(t, int32(1), resp.OnlyInActualCount)
}

func TestValidateComponents_WithTypeFilter(t *testing.T) {
	mgr := newMockManager()
	rackID, _ := setupValidateTestData(mgr)
	server := &RLAServerImpl{inventoryManager: mgr}

	resp, err := server.ValidateComponents(context.Background(), &pb.ValidateComponentsRequest{
		TargetSpec: &pb.OperationTargetSpec{
			Targets: &pb.OperationTargetSpec_Racks{
				Racks: &pb.RackTargets{
					Targets: []*pb.RackTarget{
						{Identifier: &pb.RackTarget_Id{Id: &pb.UUID{Id: rackID.String()}}},
					},
				},
			},
		},
		Filters: []*pb.Filter{
			{
				Field:     &pb.Filter_ComponentField{ComponentField: pb.ComponentFilterField_COMPONENT_FILTER_FIELD_TYPE},
				QueryInfo: &pb.StringQueryInfo{Patterns: []string{"compute"}, IsWildcard: false, UseOr: false},
			},
		},
	})

	require.NoError(t, err)
	require.NotNil(t, resp)
	// Only comp1 (mismatch) and comp2 (missing_in_actual) are compute; comp3 (nvlswitch) is filtered out
	assert.Equal(t, int32(2), resp.TotalDiffs)
	assert.Equal(t, 2, len(resp.Diffs))
	assert.Equal(t, int32(1), resp.DriftCount)
	assert.Equal(t, int32(1), resp.OnlyInActualCount)
}

func TestValidateComponents_WithNameFilter(t *testing.T) {
	mgr := newMockManager()
	rackID, _ := setupValidateTestData(mgr)
	server := &RLAServerImpl{inventoryManager: mgr}

	resp, err := server.ValidateComponents(context.Background(), &pb.ValidateComponentsRequest{
		TargetSpec: &pb.OperationTargetSpec{
			Targets: &pb.OperationTargetSpec_Racks{
				Racks: &pb.RackTargets{
					Targets: []*pb.RackTarget{
						{Identifier: &pb.RackTarget_Id{Id: &pb.UUID{Id: rackID.String()}}},
					},
				},
			},
		},
		Filters: []*pb.Filter{
			{
				Field:     &pb.Filter_ComponentField{ComponentField: pb.ComponentFilterField_COMPONENT_FILTER_FIELD_NAME},
				QueryInfo: &pb.StringQueryInfo{Patterns: []string{"compute-01"}, IsWildcard: false, UseOr: false},
			},
		},
	})

	require.NoError(t, err)
	require.NotNil(t, resp)
	// Only comp1 (compute-01) matches the name filter
	assert.Equal(t, int32(1), resp.TotalDiffs)
	assert.Equal(t, 1, len(resp.Diffs))
	assert.Equal(t, int32(1), resp.DriftCount) // comp1 is mismatch
	assert.Equal(t, int32(0), resp.OnlyInActualCount)
}

func TestValidateComponents_WithManufacturerFilter(t *testing.T) {
	mgr := newMockManager()
	rackID, _ := setupValidateTestData(mgr)
	server := &RLAServerImpl{inventoryManager: mgr}

	resp, err := server.ValidateComponents(context.Background(), &pb.ValidateComponentsRequest{
		TargetSpec: &pb.OperationTargetSpec{
			Targets: &pb.OperationTargetSpec_Racks{
				Racks: &pb.RackTargets{
					Targets: []*pb.RackTarget{
						{Identifier: &pb.RackTarget_Id{Id: &pb.UUID{Id: rackID.String()}}},
					},
				},
			},
		},
		Filters: []*pb.Filter{
			{
				Field:     &pb.Filter_ComponentField{ComponentField: pb.ComponentFilterField_COMPONENT_FILTER_FIELD_MANUFACTURER},
				QueryInfo: &pb.StringQueryInfo{Patterns: []string{"Mellanox"}, IsWildcard: false, UseOr: false},
			},
		},
	})

	require.NoError(t, err)
	require.NotNil(t, resp)
	// Only comp3 (nvlswitch-01, Mellanox) matches
	assert.Equal(t, int32(1), resp.TotalDiffs)
	assert.Equal(t, int32(1), resp.DriftCount) // comp3 is mismatch
}

func TestValidateComponents_WithPagination(t *testing.T) {
	mgr := newMockManager()
	rackID, _ := setupValidateTestData(mgr)
	server := &RLAServerImpl{inventoryManager: mgr}

	// Get first page (limit 2)
	resp, err := server.ValidateComponents(context.Background(), &pb.ValidateComponentsRequest{
		TargetSpec: &pb.OperationTargetSpec{
			Targets: &pb.OperationTargetSpec_Racks{
				Racks: &pb.RackTargets{
					Targets: []*pb.RackTarget{
						{Identifier: &pb.RackTarget_Id{Id: &pb.UUID{Id: rackID.String()}}},
					},
				},
			},
		},
		Pagination: &pb.Pagination{Offset: 0, Limit: 2},
	})

	require.NoError(t, err)
	require.NotNil(t, resp)
	assert.Equal(t, int32(3), resp.TotalDiffs) // total is still 3
	assert.Equal(t, 2, len(resp.Diffs))        // but only 2 returned

	// Get second page (offset 2, limit 2)
	resp2, err := server.ValidateComponents(context.Background(), &pb.ValidateComponentsRequest{
		TargetSpec: &pb.OperationTargetSpec{
			Targets: &pb.OperationTargetSpec_Racks{
				Racks: &pb.RackTargets{
					Targets: []*pb.RackTarget{
						{Identifier: &pb.RackTarget_Id{Id: &pb.UUID{Id: rackID.String()}}},
					},
				},
			},
		},
		Pagination: &pb.Pagination{Offset: 2, Limit: 2},
	})

	require.NoError(t, err)
	require.NotNil(t, resp2)
	assert.Equal(t, int32(3), resp2.TotalDiffs) // total is still 3
	assert.Equal(t, 1, len(resp2.Diffs))        // only 1 remaining
}

func TestValidateComponents_NoTargetSpec_GetAllDrifts(t *testing.T) {
	mgr := newMockManager()
	_, _ = setupValidateTestData(mgr)
	server := &RLAServerImpl{inventoryManager: mgr}

	// No target_spec => GetAllDrifts
	resp, err := server.ValidateComponents(context.Background(), &pb.ValidateComponentsRequest{})

	require.NoError(t, err)
	require.NotNil(t, resp)
	assert.Equal(t, int32(3), resp.TotalDiffs)
	assert.Equal(t, 3, len(resp.Diffs))
}

func TestValidateComponents_FilterAndPaginationCombined(t *testing.T) {
	mgr := newMockManager()
	rackID, _ := setupValidateTestData(mgr)
	server := &RLAServerImpl{inventoryManager: mgr}

	// Filter to compute only (2 drifts), then paginate (limit 1)
	resp, err := server.ValidateComponents(context.Background(), &pb.ValidateComponentsRequest{
		TargetSpec: &pb.OperationTargetSpec{
			Targets: &pb.OperationTargetSpec_Racks{
				Racks: &pb.RackTargets{
					Targets: []*pb.RackTarget{
						{Identifier: &pb.RackTarget_Id{Id: &pb.UUID{Id: rackID.String()}}},
					},
				},
			},
		},
		Filters: []*pb.Filter{
			{
				Field:     &pb.Filter_ComponentField{ComponentField: pb.ComponentFilterField_COMPONENT_FILTER_FIELD_TYPE},
				QueryInfo: &pb.StringQueryInfo{Patterns: []string{"compute"}, IsWildcard: false, UseOr: false},
			},
		},
		Pagination: &pb.Pagination{Offset: 0, Limit: 1},
	})

	require.NoError(t, err)
	require.NotNil(t, resp)
	assert.Equal(t, int32(2), resp.TotalDiffs) // 2 compute drifts total
	assert.Equal(t, 1, len(resp.Diffs))        // but only 1 returned (paginated)
}
